# spare-paw

./: .gitignore  CLAUDE.md  ISSUES.md  LICENSE  PLAN.md  README.md  SPEC.md  config.example.yaml  pyproject.toml  requirements.txt
defaults/: IDENTITY.md  SYSTEM.linux.md  SYSTEM.mac.md
docs/superpowers/plans/: 2026-03-28-vision-preprocessing.md  2026-04-18-tui-10of10-plan.md  2026-04-20-talk-mode.md
docs/superpowers/specs/: 2026-03-28-vision-preprocessing-design.md  2026-04-18-tui-10of10-design.md  2026-04-20-talk-mode-design.md
scripts/: install-termux.sh  install.sh  watchdog.sh
src/claw_phone/: __main__.py  config.py  gateway.py  setup_wizard.py
src/claw_phone/bot/: handler.py
src/claw_phone/cron/: executor.py
src/claw_phone/tools/: code.py  cron_tools.py  custom_tools.py
src/spare_paw/: __main__.py  backend.py  config.py  context.py  db.py  gateway.py  setup_wizard.py
src/spare_paw/bot/: backend.py  commands.py  handler.py  voice.py
src/spare_paw/cli/: client.py  entry.py  pipe.py
src/spare_paw/core/: commands.py  engine.py  planner.py  prompt.py  vision.py  voice.py
src/spare_paw/cron/: executor.py  scheduler.py
src/spare_paw/mcp/: __init__.py  client.py  schema.py
src/spare_paw/router/: __init__.py  openrouter.py  tool_loop.py
src/spare_paw/tools/: __init__.py  browser.py  code.py  cron_tools.py  custom_tools.py  dream.py  files.py  lcm_tools.py  memory.py  registry.py  shell.py  subagent.py  tavily_search.py  web_scrape.py
src/spare_paw/tui/: __init__.py  (+6 more)
tests/: _stream_helpers.py  conftest.py  test_backend.py  test_browser.py  test_chat_stream.py  test_cli_client.py  test_code.py  test_commands.py  test_config.py  test_context.py  test_context_conversation_meta.py  test_cron.py  test_db.py  test_dream.py  test_engine.py  test_engine_voice_delivery.py  test_isolation.py  test_lcm.py  test_lcm_compaction.py  test_mcp.py  test_memory.py  test_openrouter_stream.py  test_pipe_integration.py  test_planner.py  test_prompt.py  test_redact.py  test_remote_client_reconnect.py  test_router.py  test_subagent.py  test_systemd_notify.py  test_telegram_backend.py  test_telegram_format.py  test_tool_event.py  test_tool_loop.py  test_tool_loop_streaming.py  test_tools.py  test_tui_app_shell.py  test_tui_backend.py  test_tui_commands.py  test_tui_connection_state.py  (+9 more)
(+4 files in other folders)
