[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spare-paw"
version = "0.1.0"
description = "Personal AI agent accessible via Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9",
    "apscheduler>=3.10,<4",
    "beautifulsoup4>=4.12",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "mcp>=1.26.0",
]

[project.scripts]
spare-paw = "spare_paw.__main__:main"

[project.optional-dependencies]
tui = ["rich>=13.0", "textual>=1.0"]
dev = ["pytest", "pytest-asyncio", "rich>=13.0"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "slow: marks tests that spin up real servers or have long timeouts (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spare_paw = ["defaults/*.md"]
